...
        child: Obx(() => CustomScrollView(
              controller: _photosController.scroll,
              slivers: [
                SliverAppBar(
                  centerTitle: true,
                  title: Text(
                    'Awesome',
                    style: Theme.of(context).textTheme.headline4,
                  ),
                ),
                SliverAppBar(
                  pinned: true,
                  title: Row(
...
                                    ),
                          )),
                          Gap.p16(),
                          TextButton(
                              onPressed: () => _photosController.retry(),
                              child: Text(
                                'Retry',
                                style: Theme.of(context).textTheme.bodyText1,
                              ))
                        ],
                      ),
                    ),
                  ),
...
